<resources>
    <string name="app_name" translatable="false">HSEApple</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="lorem_ipsum_example" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer</string>
    <string name="app_name_logo" translatable="false">HSE Apple</string>
    <string name="current_tests" translatable="false">Current tests</string>
    <string name="completed_tests" translatable="false">Completed tests</string>
    <string name="requests" translatable="false">Requests</string>
    <string name="users" translatable="false">Users</string>
    <string name="assistants" translatable="false">Assistants</string>
    <string name="help" translatable="false">Help</string>
    <string name="about_the_app" translatable="false">About the app</string>
    <string name="go_to_the_courses" translatable="false">Go to the courses</string>
    <string name="log_out" translatable="false">Log out</string>
    <string name="language" translatable="false">Language</string>
    <string name="auth_info_login" translatable="false">Sign in with SmartPoint</string>
    <string name="navigation_menu_text" translatable="false">Navigation</string>
    <string name="tests_menu_text" translatable="false">Tests</string>
    <string name="news_menu_text" translatable="false">News</string>
    <string name="profile_menu_text" translatable="false">Profile</string>
    <string name="status_student_second" translatable="false">Student, 2 course</string>
    <string name="status_student_third" translatable="false">Student, 3 course</string>
    <string name="status_teacher" translatable="false">Teacher</string>
    <string name="create_lab_task" translatable="false">Create Lab task</string>
    <string name="create_test" translatable="false">Create test</string>
    <string name="second_course" translatable="false">SRC for iOS development 2nd course</string>
    <string name="third_course" translatable="false">SRC for iOS development 3nd course</string>
    <string name="course_navigate" translatable="false">Enter</string>
    <string name="create_event" translatable="false">Create Event</string>
    <string name="delete_content" translatable="false">Delete content</string>
    <string name="edit_content" translatable="false">Edit content</string>
    <string name="created_time" translatable="false">Created</string>
    <string name="arsure_dialog" translatable="false">Are you sure?</string>
    <string name="yes_status" translatable="false">Yes</string>
    <string name="no_status" translatable="false">No</string>
    <string name="make_a_request_course" translatable="false">Request</string>
    <string name="get_a_request_course" translatable="false">Enter</string>
    <string name="title_activity_list_of_users" translatable="false">ListOfUsersActivity</string>
    <string name="no_assistants" translatable="false">No assistants</string>
    <string name="no_events" translatable="false">No events</string>
    <string name="deadline" translatable="false">Deadline:</string>
    <string name="change_deadline" translatable="false">Change deadline</string>
    <string name="your_repository_link" translatable="false">Your repository link:</string>
    <string name="create_test_info" translatable="false">Create test</string>
    <string name="no_current_tests" translatable="false">No current tests</string>
    <string name="no_completed_tests" translatable="false">No completed tests</string>
    <string name="no_requests" translatable="false">No requests</string>
    <string name="welcome_login_first" translatable="false">Welcome</string>
    <string name="welcome_login_second" translatable="false">to HSE</string>
    <string name="welcome_login_third" translatable="false">Apple</string>
    <string name="selected_language" translatable="false">Selected language is English</string>
    <string name="available_courses" translatable="false">Available courses</string>
    <string name="no_grades" translatable="false">No grades</string>
    <string name="task_info_begin" translatable="false">Begin</string>
</resources>