<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_splash_screen"
    tools:context=".ui.activities.LoginAuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramedium"
                android:text="@string/welcome_login_first"
                android:textColor="@color/white"
                android:textSize="@dimen/_42sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/futuramedium"
                    android:text="@string/welcome_login_second"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_42sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/futuramedium"
                    android:text="@string/welcome_login_third"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_42sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@color/blueDark" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/authLogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_100sdp"
            android:backgroundTint="@color/blueDark"
            android:fontFamily="@font/futuramedium"
            android:text="@string/auth_info_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>