<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hse_background"
    android:orientation="vertical"
    tools:context=".view.activities.NewsInfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/almostDark"
            app:menu="@menu/menu_news_info"
            app:navigationIcon="@drawable/ic_arrow_back_white_action"
            app:title="Name of event"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageNewsItem"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/good_morning_img" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textNewsTitleCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="false"
                    app:counterMaxLength="50"
                    app:counterTextColor="@color/almostDark"
                    app:errorTextColor="@color/red"
                    app:startIconContentDescription="info_title_icon"
                    app:startIconDrawable="@drawable/ic_info">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newsTitleItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/hse_background"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/create_event"
                        android:textSize="@dimen/_14sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="false"
                    app:counterMaxLength="1024"
                    app:counterTextColor="@color/almostDark"
                    app:errorTextColor="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newsDescriptionItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:backgroundTint="@color/hse_background"
                        android:hint="Event description"
                        android:inputType="textCapSentences|textMultiLine|textImeMultiLine"
                        android:isScrollContainer="true"
                        android:maxLength="1024"
                        android:maxLines="50"
                        android:minHeight="@dimen/_100sdp"
                        android:padding="@dimen/_20sdp"
                        android:scrollbars="vertical"
                        android:text="@string/lorem_ipsum_example"
                        android:textColorLink="@color/blue" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/dateTimeNewsItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Created: 29.04.2022 14:54" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/confirmButtonEdit"
                        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_70sdp"
                        android:backgroundTint="@color/almostDark"
                        android:text="Confirm"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>